--- a/account_mass_reconcile/views/mass_reconcile.xml
+++ b/account_mass_reconcile/views/mass_reconcile.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<openerp>
-<data>
-
+<odoo>
     <!-- account.mass.reconcile view -->
     <record id="account_mass_reconcile_form" model="ir.ui.view">
         <field name="name">account.mass.reconcile.form</field>
@@ -138,7 +136,6 @@ The lines should have the partner, the credit entry ref. is matched vs the debit
         id="menu_mass_reconcile"
         parent="account.menu_finance_entries"/>
 
-</data>
 
 <data noupdate="1">
 
@@ -157,4 +154,4 @@ The lines should have the partner, the credit entry ref. is matched vs the debit
 
 </data>
 
-</openerp>
+</odoo>
