--- a/account_mass_reconcile/views/mass_reconcile.xml
+++ b/account_mass_reconcile/views/mass_reconcile.xml
@@ -141,15 +141,14 @@ The lines should have the partner, the credit entry ref. is matched vs the debit
 
     <record forcecreate="True" id="ir_cron_run_reconciliations" model="ir.cron">
         <field name="name">Do Automatic Reconciliations</field>
-        <field eval="False" name="active"/>
+        <field name="model_id" ref="account_mass_reconcile.model_account_mass_reconcile"/>
+        <field name="active" eval="False"/>
         <field name="user_id" ref="base.user_root"/>
         <field name="interval_number">3</field>
         <field name="interval_type">hours</field>
         <field name="numbercall">-1</field>
-        <field eval="False" name="doall"/>
-        <field eval="'account.mass.reconcile'" name="model"/>
-        <field eval="'run_scheduler'" name="function"/>
-        <field eval="'()'" name="args"/>
+        <field name="doall" eval="False"/>
+        <field name="code">model.run_scheduler()</field>
     </record>
 
 </data>
