Add auto reconcile only same journal (#2)
* Add auto reconcile only same journal

Add an option to auto reconcile only credits that are on the same
journal than the invoice.
This make sure that unrelated payment will not be used automatically.

* Update account_payment_mode_auto_reconcile/models/account_invoice.py

Co-Authored-By: Akim Juillerat <akim.juillerat@camptocamp.com>

* Update account_payment_mode_auto_reconcile/tests/test_partner_auto_reconcile.py

Co-Authored-By: Akim Juillerat <akim.juillerat@camptocamp.com>

--- a/account_payment_mode_auto_reconcile/views/account_payment_mode.xml
+++ b/account_payment_mode_auto_reconcile/views/account_payment_mode.xml
@@ -9,6 +9,7 @@
                 <group string="Auto reconcile outstanding credits" name="auto_reconcile">
                     <field name="auto_reconcile_outstanding_credits" />
                     <field name="auto_reconcile_allow_partial" attrs="{'invisible': [('auto_reconcile_outstanding_credits', '=', False)]}" />
+                    <field name="auto_reconcile_same_journal" attrs="{'invisible': [('auto_reconcile_outstanding_credits', '=', False)]}" />
                 </group>
             </group>
         </field>
