--- a/account_move_reconcile_helper/views/account_move_line.xml
+++ b/account_move_reconcile_helper/views/account_move_line.xml
@@ -9,15 +9,25 @@
         <field name="model">account.move.line</field>
         <field name="inherit_id" ref="account.view_move_line_tree" />
         <field name="arch" type="xml">
-            <field name="full_reconcile_id" position="after">
-                <field name="partial_reconciliation_in_progress" invisible="1" />
+            <field name="matching_number" position="after">
                 <button
                     name="open_full_reconcile_view"
                     type="object"
-                    string="Reconciled lines"
+                    title="Reconciled lines"
                     icon="fa-list"
-                    attrs="{'invisible': [('full_reconcile_id', '=', False), ('partial_reconciliation_in_progress', '=', False)]}"
+                    attrs="{'invisible': [('matching_number', '=', False)]}"
                 />
+            </field>
+        </field>
+    </record>
+
+    <record id="view_move_line_tax_audit_tree" model="ir.ui.view">
+        <field name="name">account.move.line.tax.audit.tree</field>
+        <field name="model">account.move.line</field>
+        <field name="inherit_id" ref="account.view_move_line_tax_audit_tree" />
+        <field name="arch" type="xml">
+            <field name="move_id" position="after">
+                <field name="matching_number" invisible="1" />
             </field>
         </field>
     </record>
