[IMP] account_reconcile_oca: Finish creation of module
* refactoring JS in order to add logic
* Improve views
* Minor fixes in Odoo code in order to fix all possible options

--- a/account_reconcile_oca/static/src/scss/reconcile.scss
+++ b/account_reconcile_oca/static/src/scss/reconcile.scss
@@ -63,6 +63,9 @@
                 &.liquidity {
                     font-weight: bold;
                 }
+                &.selected {
+                    background-color: rgba($o-brand-primary, 0.2);
+                }
             }
         }
     }
