--- a/account_payment_mode_auto_reconcile/views/account_invoice.xml
+++ b/account_payment_mode_auto_reconcile/views/account_invoice.xml
@@ -1,18 +1,21 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <odoo>
-    <record id="invoice_form_inherit" model="ir.ui.view">
-        <field name="name">account_payment_partner.invoice_form.inherit</field>
-        <field name="model">account.invoice</field>
-        <field name="inherit_id" ref="account_payment_partner.invoice_form" />
+    <record id="view_move_form_inherit" model="ir.ui.view">
+        <field name="name">account_payment_partner_view_move_form_inherit</field>
+        <field name="model">account.move</field>
+        <field name="inherit_id" ref="account_payment_partner.view_move_form" />
         <field name="arch" type="xml">
             <field name="payment_mode_id" position="before">
-                <field name="display_payment_mode_warning" invisible="True" />"
+                <field name="display_payment_mode_warning" invisible="True" />
             </field>
             <field name="payment_mode_id" position="after">
                 <label for="payment_mode_warning" invisible="True" />
                 <div
-                    class="alert alert-warning oe_edit_only"
+                    colspan="2"
+                    style="padding-top:0px; padding-left:0px"
+                    class="alert oe_edit_only"
                     attrs="{'invisible': [('display_payment_mode_warning', '!=', True)]}"
+                    role="alert"
                 >
                     <field name="payment_mode_warning" nolabel="1" />
                 </div>
