--- a/account_move_line_reconcile_manual/wizards/account_move_line_reconcile_manual_view.xml
+++ b/account_move_line_reconcile_manual/wizards/account_move_line_reconcile_manual_view.xml
@@ -26,7 +26,7 @@
                             <field name="total_credit" />
                             <field name="state" invisible="1" />
                             <field name="company_id" invisible="1" />
-                            <field name="company_currency_id" invisible="1" />
+                            <field name="currency_id" invisible="1" />
                             <field name="partner_count" invisible="1" />
                             <field name="partner_id" invisible="1" />
                     </group>
