--- a/account_reconciliation_widget/views/account_journal_dashboard_view.xml
+++ b/account_reconciliation_widget/views/account_journal_dashboard_view.xml
@@ -10,15 +10,17 @@
                 expr="//kanban/templates//div[@id='dashboard_bank_cash_left']/t[1]"
                 position="before"
             >
-                <t t-if="dashboard.number_to_reconcile > 0">
+                <div>
+                    <t t-if="dashboard.number_to_reconcile > 0">
                     <button
-                        type="object"
-                        name="action_open_reconcile"
-                        class="btn btn-primary"
-                    > Reconcile <t
-                            t-esc="dashboard.number_to_reconcile"
-                        /> Items</button>
-                </t>
+                            type="object"
+                            name="action_open_reconcile"
+                            class="btn btn-primary"
+                        > Reconcile <t
+                                t-esc="dashboard.number_to_reconcile"
+                            /> Items</button>
+                    </t>
+                </div>
             </xpath>
             <xpath
                 expr="//kanban/templates//div[@id='dashboard_bank_cash_right']"
