[FIX] account_reconcile_oca: Show manual amount in the right currency

--- a/account_reconcile_oca/views/account_bank_statement_line.xml
+++ b/account_reconcile_oca/views/account_bank_statement_line.xml
@@ -255,6 +255,7 @@
                                     string="Amount"
                                     attrs="{'readonly': ['|', ('manual_reference', '=', False), ('is_reconciled', '=', True)]}"
                                 />
+                                <field name="manual_currency_id" invisible="1" />
                                 <field name="manual_original_amount" invisible="1" />
                                 <field name="manual_move_type" invisible="1" />
                                 <label
