[IMP] account_reconcile_oca: Add narration and payment_ref

--- a/account_reconcile_oca/views/account_bank_statement_line.xml
+++ b/account_reconcile_oca/views/account_bank_statement_line.xml
@@ -288,6 +288,10 @@
                             </group>
                         </group>
                     </page>
+                    <page name="narration" string="Narration">
+                        <field name="payment_ref" />
+                        <field name="narration" />
+                    </page>
                     <page name="chatter" string="Chatter">
                         <field name="move_id" widget="account_reconcile_oca_chatter" />
                     </page>
