--- a/account_move_base_import/views/account_move_view.xml
+++ b/account_move_base_import/views/account_move_view.xml
@@ -53,7 +53,7 @@
         <field name="name">account.move.completion.rule.view</field>
         <field name="model">account.move.completion.rule</field>
         <field name="arch" type="xml">
-            <tree string="Move Completion Rule">
+            <tree>
                 <field name="sequence" />
                 <field name="name" select="1" />
                 <field name="journal_ids" />
