--- a/account_partner_reconcile/views/res_partner_view.xml
+++ b/account_partner_reconcile/views/res_partner_view.xml
@@ -7,7 +7,6 @@
         <field name="model">res.partner</field>
         <field name="inherit_id" ref="base.view_partner_form" />
         <field name="priority" eval="20" />
-        <field name="groups_id" eval="[(4, ref('account.group_account_invoice'))]" />
         <field name="arch" type="xml">
             <div name="button_box" position="inside">
                 <button
@@ -17,6 +16,7 @@
                     context="{'reconcile_mode': 'customers'}"
                     icon="fa-usd"
                     string="Match Receivables"
+                    groups="account.group_account_invoice"
                 >
                 </button>
                 <button
@@ -26,6 +26,7 @@
                     context="{'reconcile_mode': 'suppliers'}"
                     icon="fa-usd"
                     string="Match Payables"
+                    groups="account.group_account_invoice"
                 >
                 </button>
             </div>
