--- a/account_reconcile_oca/views/account_account_reconcile.xml
+++ b/account_reconcile_oca/views/account_account_reconcile.xml
@@ -22,14 +22,14 @@
                             type="object"
                             string="Reconcile"
                             class="btn btn-primary"
-                            attrs="{'invisible': [('is_reconciled', '=', True)]}"
+                            invisible="is_reconciled == True"
                         />
                         <button
                             name="clean_reconcile"
                             type="object"
                             string="Clean"
                             class="btn btn-secondary"
-                            attrs="{'invisible': [('is_reconciled', '=', True)]}"
+                            invisible="is_reconciled == True"
                         />
                     </div>
                 </div>
@@ -52,7 +52,7 @@
                     <page
                         name="reconcile_line"
                         string="Reconcile"
-                        attrs="{'invisible': [('is_reconciled', '=', True)]}"
+                        invisible="is_reconciled == True"
                     >
                         <field
                             name="add_account_move_line_id"
@@ -135,7 +135,7 @@
         <field name="name">Reconcile</field>
         <field name="res_model">account.account.reconcile</field>
         <field name="view_mode">kanban</field>
-        <field name="domain">[("partner_id", "=", active_id)]</field>
+        <field name="domain">[("partner_id", "=", id)]</field>
         <field
             name="context"
         >{'view_ref': 'account_reconcile_oca.account_account_reconcile_form_view'}</field>
@@ -150,7 +150,7 @@
         <field name="name">Reconcile</field>
         <field name="res_model">account.account.reconcile</field>
         <field name="view_mode">kanban</field>
-        <field name="domain">[("account_id", "=", active_id)]</field>
+        <field name="domain">[("account_id", "=", id)]</field>
         <field
             name="context"
         >{'view_ref': 'account_reconcile_oca.account_account_reconcile_form_view'}</field>
