--- a/account_reconcile_oca/views/account_move.xml
+++ b/account_reconcile_oca/views/account_move.xml
@@ -15,7 +15,7 @@
                     string="Bank reconcile"
                     class="btn btn-primary"
                     icon="fa-list"
-                    attrs="{'invisible': [('statement_line_id', '=', False)]}"
+                    invisible="statement_line_id == False"
                 />
             </div>
         </field>
