--- a/account_reconcile_oca/views/account_bank_statement_line.xml
+++ b/account_reconcile_oca/views/account_bank_statement_line.xml
@@ -131,14 +131,14 @@
                             string="Validate"
                             accesskey="v"
                             class="btn btn-primary"
-                            attrs="{'invisible': ['|', ('is_reconciled', '=', True), ('can_reconcile', '=', False)]}"
+                            invisible="is_reconciled == True or can_reconcile == False"
                         />
                         <button
                             name="reconcile_bank_line"
                             type="object"
                             string="Reconcile"
                             class="btn btn-primary disabled"
-                            attrs="{'invisible': ['|', ('is_reconciled', '=', True), ('can_reconcile', '=', True)]}"
+                            invisible="is_reconciled == True or can_reconcile == True"
                         />
                         <button
                             name="unreconcile_bank_line"
@@ -146,7 +146,7 @@
                             string="Unreconcile"
                             accesskey="r"
                             class="btn btn-warning"
-                            attrs="{'invisible': [('is_reconciled', '=', False)]}"
+                            invisible="is_reconciled == False"
                             confirm="Are you sure that the move should be unreconciled?"
                         />
                         <button
@@ -154,7 +154,7 @@
                             type="object"
                             string="Reset reconciliation"
                             class="btn btn-secondary"
-                            attrs="{'invisible': [('is_reconciled', '=', True)]}"
+                            invisible="is_reconciled == True"
                         />
                         <button
                             name="action_to_check"
@@ -162,14 +162,14 @@
                             class="btn btn-secondary"
                             accesskey="c"
                             type="object"
-                            attrs="{'invisible': [('to_check', '=', True)]}"
+                            invisible="to_check == True"
                         />
                             <button
                             name="action_checked"
                             string="Set as Checked"
                             accesskey="c"
                             type="object"
-                            attrs="{'invisible': [('to_check', '=', False)]}"
+                            invisible="to_check == False"
                         />
                         <button
                             name="action_show_move"
@@ -205,14 +205,14 @@
                         name="manual_model_id"
                         widget="selection_badge_uncheck"
                         nolabel="1"
-                        attrs="{'invisible': [('is_reconciled', '=', True)]}"
+                        invisible="is_reconciled == True"
                     />
                 </div>
                 <notebook>
                     <page
                         name="reconcile_line"
                         string="Reconcile"
-                        attrs="{'invisible': [('is_reconciled', '=', True)]}"
+                        invisible="is_reconciled == True"
                     >
                         <field
                             name="add_account_move_line_id"
@@ -229,31 +229,32 @@
                                 <field
                                     name="manual_account_id"
                                     string="Account"
-                                    attrs="{'readonly': ['|', '|', ('manual_reference', '=', False), ('is_reconciled', '=', True), ('manual_line_id', '!=', False)]}"
+                                    readonly="manual_reference == False or is_reconciled == True or manual_line_id != False"
                                 />
                                 <field
                                     name="manual_partner_id"
                                     string="Partner"
-                                    attrs="{'readonly': ['|', '|', ('manual_reference', '=', False), ('is_reconciled', '=', True), '&amp;', ('manual_line_id', '!=', False), ('manual_kind', '!=', 'liquidity')]}"
+                                    readonly="manual_reference == False or is_reconciled == True or (manual_line_id != False and manual_kind != 'liquidity')"
                                 />
                                 <field
                                     name="analytic_distribution"
                                     widget="analytic_distribution"
                                     groups="analytic.group_analytic_accounting"
                                     options="{'account_field': 'manual_account_id', 'business_domain': 'general'}"
-                                    attrs="{'invisible': ['|', ('manual_kind', '=', 'liquidity'), ('manual_reference', '=', False)], 'readonly': [('is_reconciled', '=', True)]}"
+                                    invisible="manual_kind == 'liquidity' or manual_reference == False"
+                                    readonly="is_reconciled == True"
                                 />
                             </group>
                             <group>
                                 <field
                                     name="manual_name"
                                     string="Name"
-                                    attrs="{'readonly': ['|', '|', ('manual_reference', '=', False), ('is_reconciled', '=', True), '&amp;', ('manual_line_id', '!=', False), ('manual_kind', '!=', 'liquidity')]}"
+                                    readonly="manual_reference == False or is_reconciled == True or (manual_line_id != False and manual_kind != 'liquidity')"
                                 />
                                 <field
                                     name="manual_amount"
                                     string="Amount"
-                                    attrs="{'readonly': ['|', ('manual_reference', '=', False), ('is_reconciled', '=', True)]}"
+                                    readonly="manual_reference == False or is_reconciled == True"
                                 />
                                 <field name="manual_currency_id" invisible="1" />
                                 <field name="manual_original_amount" invisible="1" />
@@ -261,10 +262,10 @@
                                 <label
                                     for="manual_move_id"
                                     string=""
-                                    attrs="{'invisible': ['|', ('manual_move_type', 'not in', ['in_invoice', 'in_refund', 'out_invoice', 'out_refund']), ('manual_original_amount', '=', 0)]}"
+                                    insible="manual_move_type not in ['in_invoice', 'in_refund', 'out_invoice', 'out_refund'] or manual_original_amount == 0"
                                 />
                                 <div
-                                    attrs="{'invisible': ['|', ('manual_move_type', 'not in', ['in_invoice', 'in_refund', 'out_invoice', 'out_refund']), ('manual_original_amount', '=', 0)]}"
+                                    insible="manual_move_type not in ['in_invoice', 'in_refund', 'out_invoice', 'out_refund'] or manual_original_amount == 0"
                                 >
                                     Invoice <field
                                         class="oe_inline"
@@ -293,7 +294,7 @@
                         <field name="narration" />
                     </page>
                     <page name="chatter" string="Chatter">
-                        <field name="move_id" widget="account_reconcile_oca_chatter" />
+                        <!-- <field name="move_id" widget="account_reconcile_oca_chatter" /> -->
                     </page>
                 </notebook>
             </form>
@@ -303,9 +304,9 @@
         <field name="name">Reconcile bank statement lines</field>
         <field name="res_model">account.bank.statement.line</field>
         <field name="domain">[('journal_id', '=', active_id)]</field>
-        <field
-            name="context"
-        >{'default_journal_id': active_id, 'search_default_not_reconciled': True, 'view_ref': 'account_reconcile_oca.bank_statement_line_form_reconcile_view'}</field>
+        <field name="context">
+            {'default_journal_id': active_id, 'search_default_not_reconciled': True, 'view_ref': 'account_reconcile_oca.bank_statement_line_form_reconcile_view'}
+        </field>
         <field name="view_mode">tree</field>
         <field
             name="view_ids"
@@ -322,9 +323,9 @@
         <field name="name">Reconcile bank statement lines</field>
         <field name="res_model">account.bank.statement.line</field>
         <field name="domain">[('journal_id', '=', active_id)]</field>
-        <field
-            name="context"
-        >{'default_journal_id': active_id, 'view_ref': 'account_reconcile_oca.bank_statement_line_form_reconcile_view'}</field>
+        <field name="context">
+            {'default_journal_id': active_id, 'view_ref': 'account_reconcile_oca.bank_statement_line_form_reconcile_view'}
+        </field>
         <field name="view_mode">tree</field>
         <field
             name="view_ids"
@@ -344,9 +345,9 @@
         <field name="name">Reconcile bank statement lines</field>
         <field name="res_model">account.bank.statement.line</field>
         <field name="domain">[('journal_id', '=', active_id)]</field>
-        <field
-            name="context"
-        >{'default_journal_id': active_id, 'search_default_to_check': True, 'view_ref': 'account_reconcile_oca.bank_statement_line_form_reconcile_view'}</field>
+        <field name="context">
+            {'default_journal_id': active_id, 'search_default_to_check': True, 'view_ref': 'account_reconcile_oca.bank_statement_line_form_reconcile_view'}
+        </field>
         <field name="view_mode">tree</field>
         <field
             name="view_ids"
@@ -366,7 +367,7 @@
     >
         <field name="name">Reconcile bank statement lines</field>
         <field name="res_model">account.bank.statement.line</field>
-        <field name="context">{'search_default_move_id': active_id}</field>
+        <field name="context">{'search_default_move_id': id}</field>
         <field name="view_mode">tree</field>
         <field
             name="view_ids"
