--- a/account_reconcile_oca/views/account_journal.xml
+++ b/account_reconcile_oca/views/account_journal.xml
@@ -4,14 +4,15 @@
 <odoo>
 
     <record id="view_account_journal_form" model="ir.ui.view">
-        <field name="name">account.journal.inherit.dashboard.kanban</field>
+        <field name="name">account.journal.form.inherit</field>
         <field name="model">account.journal</field>
         <field name="inherit_id" ref="account.view_account_journal_form" />
         <field name="arch" type="xml">
             <field name="suspense_account_id" position="before">
                 <field
                     name="reconcile_mode"
-                    attrs="{'required': [('type', 'in', ('bank', 'cash'))], 'invisible': [('type', 'not in', ('bank', 'cash'))]}"
+                    required="type in ('bank', 'cash')"
+                    invisible="type not in ('bank', 'cash')"
                     options="{'no_quick_create': True}"
                     groups="account.group_account_readonly"
                 />
@@ -19,7 +20,7 @@
         </field>
     </record>
     <record id="account_journal_dashboard_kanban_view" model="ir.ui.view">
-        <field name="name">account.journal.inherit.dashboard.kanban</field>
+        <field name="name">account.journal.kanban.inherit</field>
         <field name="model">account.journal</field>
         <field name="inherit_id" ref="account.account_journal_dashboard_kanban_view" />
         <field name="arch" type="xml">
@@ -59,7 +60,7 @@
                 </t>
             </xpath>
 
-            <xpath expr="//div[@id='card_action_view_menus']" position="after">
+            <xpath expr="//h5[@id='card_action_view_menus']" position="after">
                 <div>
                     <a
                         role="menuitem"
