--- a/account_reconcile_oca/views/account_bank_statement_line.xml
+++ b/account_reconcile_oca/views/account_bank_statement_line.xml
@@ -294,7 +294,7 @@
                         <field name="narration" />
                     </page>
                     <page name="chatter" string="Chatter">
-                        <!-- <field name="move_id" widget="account_reconcile_oca_chatter" /> -->
+                         <field name="move_id" widget="account_reconcile_oca_chatter" />
                     </page>
                 </notebook>
             </form>
@@ -307,11 +307,11 @@
         <field name="context">
             {'default_journal_id': active_id, 'search_default_not_reconciled': True, 'view_ref': 'account_reconcile_oca.bank_statement_line_form_reconcile_view'}
         </field>
-        <field name="view_mode">tree</field>
+        <field name="view_mode">kanban</field>
         <field
             name="view_ids"
             eval="[(5, 0, 0),
-            (0, 0, {'view_mode': 'tree', 'view_id': ref('bank_statement_line_reconcile_view')})]"
+            (0, 0, {'view_mode': 'kanban', 'view_id': ref('bank_statement_line_reconcile_view')})]"
         />
         <field name="help" type="html">
             <p class="o_view_nocontent_smiling_face">
@@ -326,11 +326,11 @@
         <field name="context">
             {'default_journal_id': active_id, 'view_ref': 'account_reconcile_oca.bank_statement_line_form_reconcile_view'}
         </field>
-        <field name="view_mode">tree</field>
+        <field name="view_mode">kanban</field>
         <field
             name="view_ids"
             eval="[(5, 0, 0),
-            (0, 0, {'view_mode': 'tree', 'view_id': ref('bank_statement_line_reconcile_view')})]"
+            (0, 0, {'view_mode': 'kanban', 'view_id': ref('bank_statement_line_reconcile_view')})]"
         />
         <field name="help" type="html">
             <p class="o_view_nocontent_smiling_face">
@@ -348,11 +348,11 @@
         <field name="context">
             {'default_journal_id': active_id, 'search_default_to_check': True, 'view_ref': 'account_reconcile_oca.bank_statement_line_form_reconcile_view'}
         </field>
-        <field name="view_mode">tree</field>
+        <field name="view_mode">kanban</field>
         <field
             name="view_ids"
             eval="[(5, 0, 0),
-            (0, 0, {'view_mode': 'tree', 'view_id': ref('bank_statement_line_reconcile_view')})]"
+            (0, 0, {'view_mode': 'kanban', 'view_id': ref('bank_statement_line_reconcile_view')})]"
         />
         <field name="help" type="html">
             <p class="o_view_nocontent_smiling_face">
@@ -368,11 +368,11 @@
         <field name="name">Reconcile bank statement lines</field>
         <field name="res_model">account.bank.statement.line</field>
         <field name="context">{'search_default_move_id': id}</field>
-        <field name="view_mode">tree</field>
+        <field name="view_mode">kanban</field>
         <field
             name="view_ids"
             eval="[(5, 0, 0),
-            (0, 0, {'view_mode': 'tree', 'view_id': ref('bank_statement_line_reconcile_view')})]"
+            (0, 0, {'view_mode': 'kanban', 'view_id': ref('bank_statement_line_reconcile_view')})]"
         />
         <field name="help" type="html">
             <p class="o_view_nocontent_smiling_face">
