--- a/account_mass_reconcile/views/mass_reconcile.xml
+++ b/account_mass_reconcile/views/mass_reconcile.xml
@@ -165,15 +165,9 @@ The lines should have the same partner, and the credit entry ref. is matched wit
                 <field name="sequence" widget="handle" />
                 <field name="name" />
                 <field name="write_off" />
-                <field
-                    name="account_lost_id"
-                    attrs="{'required':[('write_off','>',0)]}"
-                />
-                <field
-                    name="account_profit_id"
-                    attrs="{'required':[('write_off','>',0)]}"
-                />
-                <field name="journal_id" attrs="{'required':[('write_off','>',0)]}" />
+                <field name="account_lost_id" required="write_off &gt; 0" />
+                <field name="account_profit_id" required="write_off &gt; 0" />
+                <field name="journal_id" required="write_off &gt; 0" />
                 <field name="date_base_on" />
             </tree>
         </field>
