--- a/account_mass_reconcile/views/res_config_view.xml
+++ b/account_mass_reconcile/views/res_config_view.xml
@@ -5,7 +5,7 @@
         <field name="model">res.config.settings</field>
         <field name="inherit_id" ref="account.res_config_settings_view_form" />
         <field name="arch" type="xml">
-            <xpath expr="//div[@id='invoicing_settings']" position="after">
+            <xpath expr="//block[@id='invoicing_settings']" position="after">
                 <h2>Reconciliation</h2>
                 <div class="row mt16 o_settings_container" id="reconciliation_settings">
                     <div class="col-xs-12 col-md-6 o_setting_box">
