[FIX] account_reconcile_oca: Fix kanban record division

--- a/account_reconcile_oca/static/src/scss/reconcile.scss
+++ b/account_reconcile_oca/static/src/scss/reconcile.scss
@@ -7,6 +7,8 @@
     height: 100%;
     .o_kanban_renderer.o_kanban_ungrouped .o_kanban_record {
         margin: 0 0 0;
+        min-width: fit-content;
+        width: 100%;
         > div {
             border-right: thick solid rgba(0, 0, 0, 0);
         }
