--- a/account_reconcile_oca/views/account_bank_statement_line.xml
+++ b/account_reconcile_oca/views/account_bank_statement_line.xml
@@ -11,6 +11,9 @@
                 <field name="is_reconciled" />
                 <field name="currency_id" />
                 <field name="foreign_currency_id" />
+                <field name="statement_id" />
+                <field name="statement_balance_end_real" />
+                <field name="statement_name" />
                 <field name="to_check" />
                 <templates>
                     <t t-name="kanban-box">
