[IMP] account_reconcile_oca: Allow to define the statement directly

--- a/account_reconcile_oca/views/account_bank_statement.xml
+++ b/account_reconcile_oca/views/account_bank_statement.xml
@@ -24,6 +24,7 @@
                         <field name="balance_start" />
                         <field name="balance_end_real" />
                         <field name="attachment_ids" widget="many2many_binary" />
+                        <field name="line_ids" invisible="1" />
                     </group>
                 </sheet>
 
